# open-swarm-mcp

./: .dockerignore  .env.example  .gitignore  .swarm_config.json.swp  DEVELOPMENT.md  Dockerfile  README.md  USERGUIDE.md  blah.py  build_blueprint_executables.py  docker-compose.override.example.yml  docker-compose.yaml  fly.toml  get-openai-key.js  manage.py  mcp_server_config.json  package-lock.json  package.json  pyproject.toml  pytest.ini  swarm_cli_hook.py  swarm_config.json  warm
.github/workflows/: docker-io-fly-deploy.yml  docker-io.yml  python-pytest.yml  testpypi.yaml
blueprints/: README.md
blueprints/basic_agent_handoff/: blueprint_basic_agent_handoff.py
blueprints/burnt_noodles/: blueprint_burnt_noodles.py
blueprints/chaoscrew/: blueprint_chaoscrew.py
blueprints/chucks_angels/: blueprint_chucks_angels.py
blueprints/database_and_web/: README.md  blueprint_database_and_web.py  brave_agent.py  sqlite_agent.py
blueprints/default/: README.md  blueprint_default.py
blueprints/digital_butler_squad/: apps.py  blueprint_digital_butler_squad.py  models.py  serializers.py  settings.py  views.py
blueprints/digitalbutlers/: blueprint_digitalbutlers.py
blueprints/dilbot_universe/: apps.py  blueprint_dilbot_universe.py  models.py  serializers.py  settings.py  views.py
blueprints/divine-code/: blueprint_divine-code.py
blueprints/divine_ops/: blueprint_divine_ops.py
blueprints/echo/: blueprint_echo.py
blueprints/echocraft/: blueprint_echocraft.py
blueprints/echopulse/: blueprint_echopulse.py
blueprints/family_ties/: apps.py  blueprint_family_ties.py
blueprints/filesystem/: blueprint_filesystem.py
blueprints/flowise/: blueprint_flowise.py
blueprints/mcp_university/: blueprint_mcp_university.py  sample_data.sql
blueprints/mission_improbable/: blueprint_mission_improbable.py  models.py  serializers.py  settings.py  views.py
blueprints/monkai-magic/: blueprint_monkai_magic.py
blueprints/nebucha_shellzzar/: blueprint_nebucha_shellzzar.py
blueprints/nebula_shellz/: blueprint_nebula_shellz.py
blueprints/omniplex/: blueprint_omniplex.py
blueprints/path_e_tech/: blueprint_path_e_tech.py
blueprints/personal_assistant/: blueprint_personal_assistant.py
blueprints/personal_digital_assistants/: blueprint_personal_digital_assistants.py
blueprints/pls/: blueprint_pls.py
blueprints/privatedigitalassistants/: blueprint_privatedigitalassistants.py
blueprints/rue-code/: blueprint_rue_code.py
blueprints/suggestion/: blueprint_suggestion.py
launchers/: swarm_api.py  swarm_cli.py  swarm_install.py  swarm_rest.py
mcp-server-azure-keyvault/: index.js  package-lock.json  package.json
nemo_guardrails/: README.md  pyproject.toml
src/: mcp_server_config.json
tests/: conftest.py  mcp_server_config.json  swarm_config.json  test_agent_builder.py  test_apps.py  test_base_llm_provider.py  test_blueprint_base.py  test_blueprint_base_unit.py  test_blueprint_default.py  test_blueprint_discovery.py  test_blueprint_filter.py  test_blueprint_loading.py  test_blueprint_runner.py  test_blueprints.py  test_chat.py  test_cli_mode.py  test_cli_mode_selection.py  test_config_loader.py  test_core.py  test_core_chatmessage.py  test_core_filter_duplicate_system_messages.py  test_core_filter_messages.py  test_core_truncate_message_history.py  test_core_update_null_content.py  test_list_models.py  test_llm.py  test_mcp_client.py  test_mcp_client.py.bak  test_mcp_client_integration.py  test_models.py  test_new_models.py  test_openai_provider.py  test_redact.py  test_rest_mode.py  test_setup_wizard.py  test_spectacular_view.py  test_swarm_init.py  test_truncate_message_history.py  test_util.py  test_views.py  (+1 more)
(+208 files in other folders)
