[project]
name = "open-swarm-mcp"
version = "0.1.0"
description = "A tool for orchestrating Swarm MCP using both CLI and API."
readme = "README.md"
authors = [
    { name = "Matthew Hand", email = "matthewhandau@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flask",
    "apispec",
    "apispec-webframeworks",
    "marshmallow",
    "swarm @ git+https://github.com/openai/swarm.git",
    "mcp",
    "python-dotenv>=1.0.1",
    "colorama>=0.4.6",
    "pytest>=8.3.4",
    "importlib>=1.0.4",
    "pylint>=3.3.2",
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "pytest-asyncio>=0.25.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "django-template-debug>=0.3.5",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "jsonschema-pydantic>=0.6",
]
[project.scripts]
open-swarm-mcp = "open_swarm_mcp:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
[tool.uv.workspace]
members = ["open-swarm-mcp"]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.open_swarm_mcp.settings"
pythonpath = ["src"]  # Add the 'src' directory to the Python path for pytest
