[project]
name = "open-swarm"
description = "A tool for orchestrating Swarm using both CLI and API."
readme = "README.md"
authors = [
   { name = "Matthew Hand", email = "matthewhandau@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
   "aiofiles>=24.1.0",
   "aiohttp>=3.11.11",
   "asyncio>=3.4.3",
   "asynctest>=0.13.0",
   "channels>=4.2.0",
   "colorama>=0.4.6",
   "django>=4.2,<5.0",
   "django-allauth>=65.3.1",
   "django-template-debug>=0.3.5",
   "djangorestframework>=3.15.2",
   "flask>=3.1.0",
   "jmespath>=1.0.1",
   "jsonschema-pydantic>=0.6",
   "mcp>=1.2.0",
   "nemoguardrails>=0.11.0",
   "openai>=1.58.1",
   "python-dotenv>=1.0.1",
   "redis>=5.2.1",
   "requests>=2.32.3",
   "whitenoise>=6.8.2",
   "drf-spectacular>=0.23.0",
   "pyinstaller>=6.12.0",
   "python-semantic-release>=9.20.0",
]
dynamic = ["version"]

[project.scripts]
swarm-cli = "launchers.swarm_cli:main"
swarm-api = "launchers.swarm_api:main"

[project.optional-dependencies]
dev = [
   "pytest>=8.3.4",
   "pytest-asyncio>=0.25.1",
   "pytest-cov>=6.0.0",
   "pytest-django>=4.9.0",
   "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.build]
packages = [
   { include = "launchers" },
   { include = "src" }
]

[tool.hatch.build.targets.wheel]
include = ["launchers/**"]

[tool.hatch.version]
source = "hatch_vcs"

[tool.uv.workspace]
members = ["open-swarm"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.swarm.settings"
pythonpath = ["src"]
